force-app/main/default/objects/Enhancement_Request__c/Enhancement_Request__c.object-meta.xml
<CustomObject>
    <label>Enhancement Request</label>
    <nameField>
        <label>Enhancement Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhancement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>