force-app/main/default/objects/Enhancement_Request__c/fields/Enhancement_Size__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Size__c</fullName>
    <label>Enhancement Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>