force-app/main/default/objects/Enhancement_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Data Load</fullName>
            </value>
            <value>
                <fullName>New Feature Request</fullName>
            </value>
            <value>
                <fullName>New Data Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>